--- a/package.json
+++ b/package.json
@@ -1,27 +1,5 @@
 {
-  "name": "worlddashboard",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-simple-maps": "^3.0.0",
-    "recharts": "^2.12.7",
-    "lucide-react": "^0.381.0",
-    "d3-scale": "^4.0.2",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
-  },
-  "devDependencies": {
-    "vite": "^5.2.0",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "@vitejs/plugin-react": "^4.2.1"
+    "react-simple-maps": "^3.0.0"
   }
 }
