--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:world-trends": "node scripts/build_world_trends.js"
   },
   "dependencies": {
     "react": "^18.3.1",
